* Fri Jun 28 2019 Steven Pritchard <steven.pritchard@onypoint.com> - 7.11.0-0
- Add v2 compliance_markup data

* Fri Jun 28 2019 Bob Vincent <pillarsdotnet@gmail.com> - 7.10.2-0
- Add ca params for auth-extensions and subject-alt-names.

* Tue May 28 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 7.10.1-0
- No longer hardcode the puppet uid and puppet gid to 52.

* Fri May 17 2019 Robert Vincent <robert.vincent@conning.com> - 7.10.1-0
- Add missing gem-path setting to puppetserver.conf template.

* Mon Mar 25 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 7.10.0-0
- Standardized cron datatypes to use the Simplib::Cron::### types.  This
  allows more flexibility in cron scheduling.

* Fri Mar 08 2019 Nick Miller <nick.miller@onyxpoint.com> - 7.9.0-0
- Added Puppet 6 support
- Add management of $ssldir and $rundir
- Ensure that the puppet client environment is set to that which is provided by
  the server by default.

* Thu Mar 07 2019 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 7.9.0-0
- Add fact to list all the jruby jar files in the puppetserver installation
  directory.
- Allow user to change the jar file used to run puppetserver via
  pupmod::master::sysconfig::jruby_jar.
- Change the default jar file for puppetserver to jruby-9k.jar for
  the FOSS puppetserver.  (It is already set to that for PE.)

* Wed Mar 06 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 7.9.0-0
- Update minimum version of inifile Puppet module to 2.5.0
- Fix dependency cycle in a full SIMP system that was introduced by
  the new autorequire of the parent directory of an INI file in the
  ini_setting type
- Expanded the upper limit of the concat and stdlib Puppet module versions
- Updated a URL in the README.md

* Fri Jan 25 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.8.0-0
- Fixed issues with incron rules and the simp_generate_types calls.
  - This was mostly due to bugs in the newer version of incrond. However, this